tests/NormalTests/paczka1/fuzzy1/15295344.err
Error in line 3: S378 S812 61,6
Error in line 15: 2R6 SU12 42,3
Error in line 12: woPFfcsCh8 S45 58,4
Error in line 10: 2R6 S383 408,0
Error in line 18: p7E S45 10,6
Error in line 19: woPFfcsCh8 S378 81,8
Error in line 14: nRJjO S378 150,9
Error in line 29: nRJjO S383 65,8
Error in line 34: nRJjO S812 72,4
